# avocet-gui

./: CMakeLists.txt  LICENSE  README
src/: attribute.c  attribute.h  child.c  child.h  class.c  class.h  g.c  g.h  main.c  node.c  node.h  rect.h  relation.c  relation.h  style.c  style.h
test/: main.c
